--- a/KurvClass/Web.config
+++ b/KurvClass/Web.config
@@ -4,7 +4,12 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="DatabaseConnectionString" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Database.mdf;Integrated Security=True"
+        providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
+    <globalization uiCulture="en-US"/>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
